barra de busqueda y arreglos

--- a/login.html
+++ b/login.html
@@ -3,10 +3,11 @@
 <head>
   <title>Iniciar sesión</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <h1>MovieMingle</h1>
 </head>
 <body>
   <div class="container">
-    <h1>Iniciar sesión</h1>
+    <h2>Iniciar sesión</h2>
     <form id="loginForm">
       <label for="username">Nombre de usuario:</label>
       <input type="text" id="username" required>
