--- a/menu.html
+++ b/menu.html
@@ -16,8 +16,8 @@
   <nav>
     <div class="menu-left">
       <input type="text" id="barra-busqueda" placeholder="Buscar películas por nombre">
-      <button onclick="searchMovies">
-        <img src="" alt="Icono de Buscar">
+      <button onclick="searchMovies()" class="search-button">
+        <img src="images/archivo-de-busqueda.png" alt="Icono de Buscar" style= "width: 30px; height: 30px;">
       </button>
     </div>
     <div class="menu-right">
@@ -26,6 +26,7 @@
       </button>
     </div>
   </nav>
+  
 
   <div class="container">
     <div class="movies">
