--- a/registro.html
+++ b/registro.html
@@ -3,10 +3,11 @@
 <head>
   <title>Registrarse</title>
   <link rel="stylesheet" type="text/css" href="css\style.css">
+  <h1>MovieMingle</h1>
 </head>
 <body>
   <div class="container">
-    <h1>Registrarse</h1>
+    <h2>Registrarse</h2>
     <form id="registerForm" class="grid-form">
       <label for="username">Nombre de usuario:</label>
       <input type="text" id="username" required>
